--- a/mobile/android/locales/en-US/chrome/webcompatReporter.properties
+++ b/mobile/android/locales/en-US/chrome/webcompatReporter.properties
@@ -6,8 +6,7 @@
 # or functionality problem with a webpage in the browser.
 webcompat.menu.name=Report Site Issue
 
-# LOCALIZATION NOTE (webcompat.menu.name): An "issue" is a bug, display,
-# or functionality problem with a webpage in the browser.
-webcompat.reportDesktopMode.message=Would you like to report an issue with the mobile site at webcompat.com?
-webcompat.reportDesktopModeYes.label=Yes
-webcompat.reportDesktopModeNo.label=No thanks
+# LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
+# bug, display, or functionality problem with a webpage in the browser.
+webcompat.reportDesktopMode.message=Report site issue?
+webcompat.reportDesktopModeYes.label=Report
